Code Clean Up
- Cleaned up some code that could be shrunk or more readability.
- Fixed lots of spelling and grammar.